[gd_scene load_steps=12 format=3 uid="uid://c6r5gtw4mg8v3"]

[ext_resource type="Script" uid="uid://b42482f4ikls0" path="res://Scripts/main.gd" id="1_xkg87"]
[ext_resource type="TileSet" uid="uid://3vwvmv8e6xi3" path="res://Tilemap/tile_set64.tres" id="2_aw3qt"]
[ext_resource type="PackedScene" uid="uid://burduwj7bfoqj" path="res://Scenes/player.tscn" id="2_c4jug"]
[ext_resource type="PackedScene" uid="uid://dlewg7073gbsh" path="res://Scenes/timerBlock.tscn" id="4_osxxy"]
[ext_resource type="PackedScene" uid="uid://ex0ybpxxhoru" path="res://Scenes/HUD.tscn" id="5_4043r"]
[ext_resource type="Script" uid="uid://dydsq2bnkk78d" path="res://Scripts/EnemySpawner.gd" id="8_ynf5e"]
[ext_resource type="Texture2D" uid="uid://ba6on5g7qhqhw" path="res://Sprites/background.png" id="9_d1ilt"]
[ext_resource type="PackedScene" uid="uid://ba8ns67se76hv" path="res://Scenes/enemy.tscn" id="9_hptm8"]
[ext_resource type="PackedScene" uid="uid://ermkwt1sn0hx" path="res://Scenes/cat_can.tscn" id="9_u6odk"]
[ext_resource type="Texture2D" uid="uid://c065hscxs1837" path="res://Sprites/mountain_bg.png" id="10_6iyac"]
[ext_resource type="Texture2D" uid="uid://sbfryquegrmb" path="res://Sprites/night_sky_bg.png" id="11_fdnlq"]

[node name="Main" type="Node2D"]
script = ExtResource("1_xkg87")

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
position = Vector2(-229, 6)
tile_set = ExtResource("2_aw3qt")
format = 2
layer_0/tile_data = PackedInt32Array(983040, 65539, 0, 983041, 65539, 0, 983042, 65539, 0, 983043, 65539, 0, 983044, 65539, 0, 983045, 65539, 0, 983046, 65539, 0, 983047, 65539, 0, 983048, 65539, 0, 983049, 65539, 0, 983050, 65539, 0, 0, 3, 0, 65536, 3, 0, 131072, 3, 0, 196608, 3, 0, 262144, 3, 0, 327680, 3, 0, 393216, 3, 0, 458752, 3, 0, 524288, 3, 0, 589824, 3, 0, 655360, 3, 0, 720896, 3, 0, 786432, 3, 0, 851968, 3, 0, 917504, 3, 0, 983051, 65539, 0, 11, 3, 0, 65547, 3, 0, 131083, 3, 0, 196619, 3, 0, 262155, 3, 0, 327691, 3, 0, 393227, 3, 0, 458763, 3, 0, 524299, 3, 0, 589835, 3, 0, 655371, 3, 0, 720907, 3, 0, 786443, 3, 0, 851979, 3, 0, 917515, 3, 0, 917514, 0, 0, 851977, 0, 0, 917513, 0, 0, 786440, 0, 0, 851976, 0, 0, 917512, 0, 0, 720903, 0, 0, 786439, 0, 0, 851975, 0, 0, 917511, 0, 0, 655366, 0, 0, 720902, 3, 0, 786438, 0, 0, 851974, 0, 0, 917510, 0, 0, 917509, 0, 0, 851973, 0, 0, 786437, 0, 0, 720901, 0, 0, 655365, 0, 0, 589829, 3, 0, 524292, 0, 0, 589828, 0, 0, 655364, 0, 0, 720900, 0, 0, 786436, 0, 0, 851972, 3, 0, 917508, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 720899, 0, 0, 786435, 0, 0, 851971, 3, 0, 917507, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 3, 0, 589826, 0, 0, 655362, 0, 0, 720898, 0, 0, 786434, 3, 0, 851970, 0, 0, 917506, 3, 0, 327681, 0, 0, 393217, 3, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 0, 0, 851969, 3, 0, 917505, 0, 0, 655370, 65536, 0, 720906, 65536, 0, 786442, 65536, 0, 851978, 65536, 0, 589833, 3, 0, 655369, 65536, 0, 720905, 65536, 0, 786441, 65536, 0, 524296, 65536, 0, 589832, 65536, 0, 655368, 65536, 0, 720904, 65536, 0, 458759, 65536, 0, 524295, 65536, 0, 589831, 65536, 0, 655367, 65536, 0, 458758, 3, 0, 524294, 65536, 0, 589830, 65536, 0, 393222, 65536, 0, 393221, 65536, 0, 458757, 65536, 0, 524293, 65536, 0, 327685, 65536, 0, 262148, 65536, 0, 327684, 65536, 0, 458756, 65536, 0, 196611, 3, 0, 262147, 65536, 0, 327683, 65536, 0, 393219, 65536, 0, 131074, 65536, 0, 196610, 65536, 0, 262146, 65536, 0, 327682, 65536, 0, 65537, 65536, 0, 131073, 65536, 0, 196609, 65536, 0, 262145, 65536, 0, -65536, 3, 0, -131072, 3, 0, -196608, 3, 0, -262144, 3, 0, -327680, 3, 0, -393216, 3, 0, -458752, 3, 0, -524288, 3, 0, -589824, 3, 0, -655360, 3, 0, -720896, 3, 0, -786432, 3, 0, -851968, 3, 0, -917504, 3, 0, -983040, 3, 0, -1048576, 3, 0, -1114112, 3, 0, -1179648, 3, 0, -1245184, 3, 0, -1310720, 3, 0, -1376256, 3, 0, -1441792, 3, 0, -1507328, 3, 0, -1572864, 3, 0, -1638400, 3, 0, -1703936, 3, 0, -1769472, 3, 0, -1835008, 3, 0, -1900544, 3, 0, -1966080, 3, 0, -2031616, 3, 0, -2097152, 3, 0, -2162688, 3, 0, -65525, 3, 0, -131061, 3, 0, -196597, 3, 0, -262133, 3, 0, -327669, 3, 0, -393205, 3, 0, -458741, 3, 0, -524277, 3, 0, -589813, 3, 0, -655349, 3, 0, -720885, 3, 0, -786421, 3, 0, -851957, 3, 0, -917493, 3, 0, -983029, 3, 0, -1048565, 3, 0, -1114101, 3, 0, -1179637, 3, 0, -1245173, 3, 0, -1310709, 3, 0, -1376245, 3, 0, -1441781, 3, 0, -1507317, 3, 0, -1572853, 3, 0, -1638389, 3, 0, -1703925, 3, 0, -1769461, 3, 0, -1834997, 3, 0, -1900533, 3, 0, -1966069, 3, 0, -2031605, 3, 0, -2097141, 3, 0, -2162677, 3, 0, -2228213, 3, 0, -2228224, 3, 0, -2293760, 3, 0, -2359296, 3, 0, -2424832, 3, 0, -2490368, 3, 0, -2555904, 3, 0, -2621440, 3, 0, -2686976, 3, 0, -2752512, 3, 0, -2818048, 3, 0, -2883584, 3, 0, -2949120, 3, 0, -3014656, 3, 0, -3080192, 3, 0, -3145728, 3, 0, -3211264, 3, 0, -3276800, 3, 0, -3342336, 3, 0, -3407872, 3, 0, -3473408, 3, 0, -3538944, 3, 0, -3604480, 3, 0, -3670016, 3, 0, -3735552, 3, 0, -3801088, 3, 0, -3866624, 3, 0, -3932160, 3, 0, -3997696, 3, 0, -4063232, 3, 0, -4128768, 3, 0, -4194304, 3, 0, -4259840, 3, 0, -4325376, 3, 0, -4390912, 3, 0, -4456448, 3, 0, -4521984, 3, 0, -4587520, 3, 0, -4653056, 3, 0, -4718592, 3, 0, -4784128, 3, 0, -4849664, 3, 0, -4915200, 3, 0, -4980736, 3, 0, -5046272, 3, 0, -5111808, 3, 0, -5177344, 3, 0, -5242880, 3, 0, -5308416, 3, 0, -2293749, 3, 0, -2359285, 3, 0, -2424821, 3, 0, -2490357, 3, 0, -2555893, 3, 0, -2621429, 3, 0, -2686965, 3, 0, -2752501, 3, 0, -2818037, 3, 0, -2883573, 3, 0, -2949109, 3, 0, -3014645, 3, 0, -3080181, 3, 0, -3145717, 3, 0, -3211253, 3, 0, -3276789, 3, 0, -3342325, 3, 0, -3407861, 3, 0, -3473397, 3, 0, -3538933, 3, 0, -3604469, 3, 0, -3670005, 3, 0, -3735541, 3, 0, -3801077, 3, 0, -3866613, 3, 0, -3932149, 3, 0, -3997685, 3, 0, -4063221, 3, 0, -4128757, 3, 0, -4194293, 3, 0, -4259829, 3, 0, -4325365, 3, 0, -4390901, 3, 0, -4456437, 3, 0, -4521973, 3, 0, -4587509, 3, 0, -4653045, 3, 0, -4718581, 3, 0, -4784117, 3, 0, -4849653, 3, 0, -4915189, 3, 0, -4980725, 3, 0, -5046261, 3, 0, -5111797, 3, 0, -5177333, 3, 0, -5242869, 3, 0, -5308405, 3, 0, 393220, 3, 0, 327688, 3, 0, 196613, 3, 0, 9, 3, 0, -65529, 3, 0, -131069, 3, 0, -262136, 3, 0, -458748, 3, 0, -589822, 3, 0, -262139, 3, 0, -851965, 3, 0, -851960, 3, 0, -720891, 3, 0, -1048571, 3, 0, -1114104, 3, 0, -1310713, 3, 0, -1703927, 3, 0, -1441783, 3, 0, -1835005, 3, 0, -1966074, 3, 0, -1703930, 3, 0, -2424826, 3, 0, -2424823, 3, 0, -2555901, 3, 0, -2883580, 3, 0, -2686969, 3, 0, -3145719, 3, 0, -3276796, 3, 0, -3145722, 3, 0, -3604477, 3, 0, -3538939, 3, 0, -3145726, 3, 0, -3342329, 3, 0, -3866615, 3, 0, -3801082, 3, 0, -4128764, 3, 0, -3866621, 3, 0, -4194295, 3, 0, -4325372, 3, 0, -4456445, 3, 0, -5046271, 3, 0, -5111798, 3, 0, -5046262, 3, 0, -5242874, 3, 0, -5242878, 3, 0, 196617, 3, 0, -262143, 3, 0, -393213, 3, 0, -458742, 3, 0, -655356, 3, 0, -589820, 3, 0, -524284, 3, 0, -720893, 3, 0, -720894, 3, 0, -589818, 3, 0, -983030, 3, 0, -1179645, 3, 0, -1376255, 3, 0, -1245179, 3, 0, -1507321, 3, 0, -1703934, 3, 0, -1572863, 3, 0, -1966076, 3, 0, -2228218, 3, 0, -2097146, 3, 0, -2752511, 3, 0, -2883576, 3, 0, -3014650, 3, 0, -2818042, 3, 0, -3014652, 3, 0, -3670015, 3, 0, -3735551, 3, 0, -3997689, 3, 0, -4063227, 3, 0, -4194303, 3, 0, -4390911, 3, 0, -4194297, 3, 0, -4325366, 3, 0, -4456439, 3, 0, -4915198, 3, 0, -5046265, 3, 0, -5177334, 3, 0, -5308406, 3, 0, -5308407, 3, 0, -5308415, 3, 0, -5308414, 3, 0, -393207, 3, 0, -1245175, 3, 0, -2031608, 3, 0, -2228215, 3, 0, -3997690, 3, 0, -1245183, 65536, 0, -1245182, 65536, 0, -1179646, 65536, 0, -1245181, 65536, 0, -1310718, 65536, 0, -917496, 65536, 0, -851961, 65536, 0, -786424, 65536, 0, -851959, 65536, 0, -786428, 65536, 0, -720892, 65536, 0, -458743, 65536, 0, -393208, 65536, 0, -393206, 65536, 0, -327671, 65536, 0, -327679, 65536, 0, -327678, 65536, 0, -327677, 65536, 0, -393214, 65536, 0, -262142, 65536, 0, -1572856, 65536, 0, -1507320, 65536, 0, -1441784, 65536, 0, -1507319, 65536, 0, -3801078, 0, 0, -3735542, 0, 0, -3670006, 0, 0, -3604470, 0, 0, -3538934, 0, 0, -3473398, 0, 0, -3407862, 0, 0, -3342326, 0, 0, -3276790, 0, 0, -3211254, 0, 0, -3145718, 0, 0, -3080182, 0, 0, -3014646, 0, 0, -2949110, 0, 0, -2883574, 0, 0, -2818038, 0, 0, -2752502, 0, 0, -2686966, 0, 0, -2621430, 0, 0, -2555894, 0, 0, -2490358, 0, 0, -2424822, 0, 0, -2359286, 0, 0, -2228214, 0, 0, -2162678, 0, 0, -2097142, 0, 0, -2031606, 0, 0, -1966070, 0, 0, -1900534, 0, 0, -1834998, 0, 0, -1769462, 0, 0, -3801087, 0, 0, -3604479, 0, 0, -3538943, 0, 0, -3473407, 0, 0, -3407871, 0, 0, -3342335, 0, 0, -3276799, 0, 0, -3211263, 0, 0, -3145727, 0, 0, -3080191, 0, 0, -3014655, 0, 0, -2949119, 0, 0, -2883583, 0, 0, -2818047, 0, 0, -2686975, 0, 0, -2621439, 0, 0, -2555903, 0, 0, -2490367, 0, 0, -2359295, 0, 0, -2293759, 0, 0, -2162687, 0, 0, -2097151, 0, 0, -2031615, 0, 0, -1966079, 0, 0, -1900543, 0, 0, -1835007, 0, 0, -1769471, 0, 0, -4784122, 3, 0, -5111802, 3, 0, -4390904, 3, 0, -917502, 3, 0, -1507323, 3, 0, -983033, 3, 0)

[node name="Player" parent="." instance=ExtResource("2_c4jug")]
position = Vector2(-130, 935)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TimerBlocks" type="Node2D" parent="."]

[node name="TimerBlock" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(315, -2011)
count_time = 1

[node name="TimerBrock1" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(315, 806)
count_time = 2

[node name="TimerBlock2" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(251, 678)
count_time = 3

[node name="TimerBlock3" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(187, 102)
count_time = 2

[node name="TimerBlock4" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(59, 38)
count_time = 2

[node name="TimerBlock5" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(443, -2202)
count_time = 2

[node name="TimerBlock6" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(59, -2586)
count_time = 3

[node name="TimerBlock7" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(123, -3799)
count_time = 1

[node name="TimerBlock8" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(315, -3674)
count_time = 2

[node name="TimerBlock9" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(122, -4826)
count_time = 1

[node name="TimerBlock10" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(-5, -4954)
count_time = 1

[node name="TimerBlock11" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(379, -4954)
count_time = 1

[node name="TimerBlock12" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(59, -4506)
count_time = 2

[node name="TimerBlock13" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(187, -4442)
count_time = 3

[node name="TimerBlock14" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(-5, -4634)
count_time = 2

[node name="TimerBlock15" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(379, -3354)
count_time = 3

[node name="TimerBlock16" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(-5, -2074)
count_time = 3

[node name="TimerBlock17" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(-133, -2138)
count_time = 3

[node name="TimerBlock18" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(-5, -2266)
count_time = 2

[node name="TimerBlock19" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(-133, -2330)
count_time = 1

[node name="TimerBlock20" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(-69, -922)
count_time = 2

[node name="TimerBlock21" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(187, -1114)
count_time = 3

[node name="TimerBlock22" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(-5, -1434)
count_time = 3

[node name="TimerBlock23" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(187, -1306)
count_time = 3

[node name="TimerBlock24" parent="TimerBlocks" instance=ExtResource("4_osxxy")]
position = Vector2(315, -538)
count_time = 3

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(160, 935)

[node name="InitPosition" type="Marker2D" parent="."]
position = Vector2(-130, 935)

[node name="RemainTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("5_4043r")]

[node name="CatCan" parent="." instance=ExtResource("9_u6odk")]
position = Vector2(-128, -5221)

[node name="EnemySpawner" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("8_ynf5e")
enemy_scene = ExtResource("9_hptm8")
player = NodePath("../Player")

[node name="EnemyTimer" type="Timer" parent="EnemySpawner"]
wait_time = 0.8

[node name="Background" type="Node2D" parent="."]
z_index = -2
position = Vector2(280, -250)

[node name="TextureRect" type="TextureRect" parent="Background"]
offset_left = -1646.0
offset_top = -3322.0
offset_right = 1278.0
offset_bottom = -1193.0
scale = Vector2(1.02, 0.96)
texture = ExtResource("9_d1ilt")

[node name="TextureRect2" type="TextureRect" parent="Background"]
offset_left = -1351.0
offset_top = -1343.0
offset_right = 1351.0
offset_bottom = 468.0
scale = Vector2(1, 1.56)
texture = ExtResource("10_6iyac")

[node name="TextureRect3" type="TextureRect" parent="Background"]
offset_left = -1307.0
offset_top = -5767.0
offset_right = 1323.0
offset_bottom = -3829.0
scale = Vector2(1, 1.28)
texture = ExtResource("11_fdnlq")

[connection signal="timeout" from="RemainTimer" to="." method="_on_remain_timer_timeout"]
[connection signal="goal" from="CatCan" to="." method="_on_cat_can_goal"]
[connection signal="timeout" from="EnemySpawner/EnemyTimer" to="EnemySpawner" method="_on_enemy_timer_timeout"]
